--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -88,18 +88,18 @@
 
     <!-- Блок с цифрами -->
 
-    <div class="numbers numbers-bg effect6">
+    <div class="numbers numbers-bg effect6" id="counts">
         <div class="container-fluid">
             <div class="text-center">
                 <div class="row text-center padding-top-numbers">
-                    <div class="col-xl-4">
+                    <div class="col-xl-4 spincrement">
                         7
                     </div>
-                    <div class="col-xl-4">
+                    <div class="col-xl-4 spincrement">
                         8
                     </div>
                     <div class="col-xl-4">
-                        500+
+                        <p><span class="spincrement">500</span>+</p>
                     </div>
                 </div>
                 <div class="row text-size">
@@ -132,14 +132,14 @@
         <!-- Услуги -->
         <div class="container-fluid paddingTop">
             <div class="row text-center effect1 paddingBottom">
-                <div class="col-xl-6 thumb-wrap">
+                <div class="col-xl-6 thumb-wrap wow slideInLeft">
                     <h1 class="korenDiensten">Zing in koren</h1>
                     <!-- Настраиваю описание услуги -->
                     <h1 class="description">Lorem ipsum dolor ares hier moet iets nog zijn. En dat zou echt een mooie website zijn.</h1>
                     <iframe src="https://www.youtube.com/embed/mnL_B89juJY" frameborder="0" allow="encrypted-media" allowfullscreen style="margin-top: 10%; margin-left: 5%"></iframe>
                     <a class="btn btn-lg" href="#" role="button">Lees meer</a>
                 </div>
-                <div class="col-xl-6 thumb-wrap">
+                <div class="col-xl-6 thumb-wrap wow slideInRight">
                     <h1 class="korenDiensten">Sing & Travel</h1>
                     <!-- Настраиваю описание услуги -->
                     <h1 class="description">Lorem ipsum dolor ares hier moet iets nog zijn. En dat zou echt een mooie website zijn.</h1>
@@ -152,13 +152,64 @@
 
     <!-- Блок с отзывами -->
 
-{#    <div class="opinion">#}
-{#        <div class="container">#}
-{#            <div class="row">#}
-{#                .col-xl-#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
+    <div class="opinion text-center">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="first">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-xl col-lg"></div>
+                                <div class="col-xl-5 col-lg-9">
+                                    <p>«Umgeben von tiefen Wäldern befinden sich einige Kilometer südlich von Berlin die
+                                        sagenumwobenen
+                                        Beelitz-Heilstätten, ein zwischen 1898 und 1930 errichtetes Sanatorium für
+                                        unheilbar kranke
+                                        Lungenpatienten, das während der Weltkriege zudem als Lazarett genutzt wurde».
+                                    </p>
+                                    <img src="/static/images/Elena-en-Andrekopie.jpg" alt="Elena Magnee en Andre Jansen" class="opinionImg">
+                                    <p class="name">Elena en Andre, Koorcompany</p>
+                                </div>
+                                <div class="col-xl col-lg"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="second">
+                        <div class="container-fluid phone">
+                            <div class="row">
+                                <div class="col-xl col-lg"></div>
+                                <div class="col-xl-5 col-lg-9">
+                                    <p>«Umgeben von tiefen Wäldern befinden sich einige Kilometer südlich von Berlin die
+                                        sagenumwobenen
+                                        Beelitz-Heilstätten, ein zwischen 1898 und 1930 errichtetes Sanatorium für
+                                        unheilbar kranke
+                                        Lungenpatienten, das während der Weltkriege zudem als Lazarett genutzt wurde».
+                                    </p>
+                                    <img src="/static/images/Elena-en-Andrekopie.jpg" alt="Elena Magnee en Andre Jansen" class="opinionImg">
+                                    <p class="name">Elena en Andre, Koorcompany</p>
+                                </div>
+                                <div class="col-xl col-lg"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+
+
+
+
 
 
 
